sugar (0.79.0-2) UNRELEASED; urgency=low

  * Drop commented out relibtoolize rules from debian/control (claiming
    relibtoolizing in 0.79.0-1 was a lie).
  * Fix Git commands in README.packaging: Cannot push all+tags in 1 go.
  * Bump copyright years for debian/* files.
  * Add watch file.

 -- Jonas Smedegaard <dr@jones.dk>  Sat, 08 Mar 2008 02:11:16 +0100

sugar (0.79.0-1) unstable; urgency=low

  * First official release. Closes: bug#444021.
  * New Upstream Version
  * Update CDBS tweaks:
    + Add upstream-tarball.mk to implement get-orig-source target.
      Pristine-tar Git branch is maintained too, but git-buildpackage
      does not yet support recreating the bz2 tarball
    + Update copyright-check.mk to parse licensecheck using perl:
      + No longer randomly drops newlines
      + More compact hint file (and ordered more like wiki-proposed new
        copyright syntax).
      + No longer ignore files without copyright.
    + Strip no longer relevant notes on cdbs-autoupdate.mk from
      README.cdbs-tweaks
  * Fix invoking dh_pycentral.
  * Add sections on packaging to README.packaging.
  * Cleanup duplicate build-dependencies in debian/rules
    (upstream-tarball.mk needs tightened cdbs dependency).
  * Stop generating autotools now included in upstream tarball.
  * Relibtoolize to avoid hardcoded rpath.
  * Add upstream source (in addition to Git source) to debian/copyright.
  * Add Vcs-* and Homepage fields to debian/control.
  * Fix typo and mention XO in long description.
  * Semi-auto-update debian/control to update build-dependencies:
    DEB_AUTO_UPDATE_DEBIAN_CONTROL=yes fakeroot debian/rules clean

 -- Jonas Smedegaard <dr@jones.dk>  Sat, 08 Mar 2008 02:04:11 +0100

sugar (0.2~git20080111-0~0jones1) jones; urgency=low

  * Initial unofficial release.

 -- Jonas Smedegaard <dr@jones.dk>  Sat, 24 Nov 2007 12:54:48 +0100