@@ -2,7 +2,7 @@ Source: sugar
 Section: x11
 Priority: optional
 Maintainer: Jonas Smedegaard <dr@jones.dk>
-Build-Depends: cdbs (>= 0.4.39), autotools-dev, debhelper (>= 5), devscripts (>= 2.10.7), dh-buildinfo, libglib2.0-dev, python-gtk2-dev, gettext, intltool, shared-mime-info, python-central
+Build-Depends: cdbs (>= 0.4.39), autotools-dev, debhelper (>= 5), devscripts (>= 2.10.7), dh-buildinfo, libglib2.0-dev, python-gtk2-dev, gettext, intltool, shared-mime-info, python-central, python-empy
 Standards-Version: 3.7.3
 Vcs-Git: git://git.debian.org/git/collab-maint/sugar.git
 Vcs-Browser: http://git.debian.org/?p=collab-maint/sugar.git;a=summary
